# Yahtzee

./: DesignDoc.md  HOW_THE_AGENT_WORKS.md  LICENSE  README.md  index.html  main.py  pyproject.toml  requirements.txt
agent/: action_selection.py  model.py
agent - micah/: __init__.py
environment/: __init__.py  dice_manager.py  yahtzee_env.py
environment - micah/: dice_manager.py  scorecard_manager.py  yahtzee_env.py
gui/: __init__.py  gui.py  misc.py
gui/assets/: references.txt
models/: model1.pt  model2.pt.ckpt  model3.pt  model3.pt.ckpt  model3_v2.pt  model3_v2.pt.ckpt  run_shaped.pt  run_sparse.pt
scripts/: plot_model_eval.py  plot_training_comparison.py  setup.sh  smoke_run_env_agent.py  train.sh
src/agent/: __init__.py  action_selection.py  dqn_agent.py  model.py  shaped_env.py
src/engine/: __init__.py  action_codec.py  constants.py  dice.py  scorecard.py  scorecard_manager.py  yahtzee_env.py
src/gui/: dice.py  gui.py  misc.py
src/gui/old_pygame/: gui.py  misc.py  yahtzee_class.py
src/perception/: __init__.py  vision_node.py
src/robotics/: __init__.py  action_server.py  execution_wrapper.py
test/: conftest.py  test_agent.py  test_engine.py
tests/: test_action_codec.py  test_action_selection.py  test_dice_manager.py  test_env_agent_integration.py  test_model.py  test_scorecard_manager.py  test_yahtzee_env.py
webpage_images/: references.txt
